Add: "set_app_dir_and_main_file.sh" to Loads .env file and sets APP_DIR, APP_MAIN_FILE and APP_HANDLER environment variables with the Python entry point for uvicorn and gunicorn [FA-248]. Add: ".npmignore" to the ".chalice" and "scripts/aws_big_lambda" directories [FA-258]. Change: "run_aws.sh", "secure_local_server/run.sh" and "big_lambdas_manager.sh" to implement "set_app_dir_and_main_file.sh" [FA-248] and [FA-98]. Change: "run_aws.sh" to call "secure_local_server/run.sh" for "gunicorn" and "uvicorn" RUN_METHODs and "https" RUN_PROTOCOL [FA-248]. Change: "big_lambdas_manager.sh" and "run_local_dns.sh" to build templates and configuration files in "/tmp" [FA-248] and [FA-98]. Fix: error "KeyError: 'APP_DB_NAME'" in "secure_local_server/docker_entrypoint.sh" by setting APP_DB_ENGINE, APP_DB_NAME, APP_DB_URI, APP_CORS_ORIGIN, AWS_S3_CHATBOT_ATTACHMENTS_BUCKET env. vars. before calling uvicorn and gunicorn [FA-248]. Fix: the lack of responses issue calling the backend over https for "gunicorn" and "uvicorn" RUN_METHODs, by removing the SSL certificates path parameters in uvicorn and gunicorn calls in "secure_local_server/docker_entrypoint.sh", because the Nginx service takes care about SSL handling [FA-248].

--- a/scripts/secure_local_server/docker-compose.yml
+++ b/scripts/secure_local_server/docker-compose.yml
@@ -11,6 +11,9 @@ services:
       - ${HOME}/.aws:/root/.aws
     environment:
       - STAGE=${STAGE}
+      - APP_DIR=${APP_DIR}
+      - APP_MAIN_FILE=${APP_MAIN_FILE}
+      - APP_HANDLER=${APP_HANDLER}
     entrypoint: /var/scripts/docker_entrypoint.sh
 
   nginx:
@@ -27,7 +30,7 @@ services:
     environment:
       - APP_NAME_LOWERCASE=${APP_NAME_LOWERCASE}
     volumes:
-      - ${SCRIPTS_DIR}/nginx.conf.tmp:/etc/nginx/nginx.conf
+      - ${TMP_WORKING_DIR}/nginx.conf.tmp:/etc/nginx/nginx.conf
       - ${REPO_BASEDIR}/app.${APP_NAME_LOWERCASE}.local.key:/etc/nginx/ssl/app.${APP_NAME_LOWERCASE}.local.key
       - ${REPO_BASEDIR}/app.${APP_NAME_LOWERCASE}.local.crt:/etc/nginx/ssl/app.${APP_NAME_LOWERCASE}.local.crt
       - ${REPO_BASEDIR}/app.${APP_NAME_LOWERCASE}.local.chain.crt:/etc/nginx/ssl/app.${APP_NAME_LOWERCASE}.local.chain.crt
