Add: "get_domain_name_dev.sh" to support mask the S3 URL and avoid AWS over-billing attacks [GS-72]. Add: STORAGE_URL_SEED and APP_HOST_NAME env. vars. to big lambda deployment and chalice config [GS-72]. Add: "run_generate_seed.sh" and "generate_seed.py" to suggest the STORAGE_URL_SEED value. Add: "show_date_time.sh" to replace the repetitive code to show current date/time in bash scripts. Change: Unify the domain name getting with "get_domain_name.sh". Change: the way "big_lambdas_manager.sh" replace env. vars. using "*_placeholder". Change: Local DNS configuration /tmp/named-to-add.conf is added to /etc/bind/named.conf.local instead of /etc/bind/named.conf. Change: "db_mongo_backup.sh" and "db_mongo_restore.sh" enhanced to handle zip files.

--- a/scripts/aws_big_lambda/template-sam.yml
+++ b/scripts/aws_big_lambda/template-sam.yml
@@ -68,10 +68,12 @@ Resources:
           APP_NAME: APP_NAME_placeholder
           AI_ASSISTANT_NAME: AI_ASSISTANT_NAME_placeholder
           APP_VERSION: APP_VERSION_placeholder
+          APP_HOST_NAME: APP_HOST_NAME_placeholder
           FLASK_APP: FLASK_APP_placeholder
           APP_DEBUG: APP_DEBUG_placeholder
           APP_STAGE: APP_STAGE_placeholder
           APP_SECRET_KEY: APP_SECRET_KEY_placeholder
+          STORAGE_URL_SEED: STORAGE_URL_SEED_placeholder
           APP_SUPERADMIN_EMAIL: APP_SUPERADMIN_EMAIL_placeholder
           APP_CORS_ORIGIN: APP_CORS_ORIGIN_placeholder
           APP_DB_ENGINE: APP_DB_ENGINE_placeholder
