--- a/.chalice/config-example.json
+++ b/.chalice/config-example.json
@@ -6,8 +6,9 @@
     "APP_NAME": "APP_NAME_placeholder",
     "AI_ASSISTANT_NAME": "AI_ASSISTANT_NAME_placeholder",
     "APP_VERSION": "APP_VERSION_placeholder",
-    "APP_SECRET_KEY": "APP_SECRET_KEY_placeholder",
     "APP_SUPERADMIN_EMAIL": "APP_SUPERADMIN_EMAIL_placeholder",
+    "APP_SECRET_KEY": "APP_SECRET_KEY_placeholder",
+    "STORAGE_URL_SEED": "STORAGE_URL_SEED_placeholder",
     "GIT_SUBMODULE_URL": "GIT_SUBMODULE_URL_placeholder",
     "GIT_SUBMODULE_LOCAL_PATH": "GIT_SUBMODULE_LOCAL_PATH_placeholder",
     "CURRENT_FRAMEWORK": "CURRENT_FRAMEWORK_placeholder",
@@ -34,6 +35,7 @@
       "environment_variables": {
         "APP_DEBUG": "APP_DEBUG_placeholder",
         "APP_STAGE": "dev",
+        "APP_HOST_NAME": "APP_HOST_NAME_DEV_placeholder",
         "APP_DB_ENGINE": "APP_DB_ENGINE_DEV_placeholder",
         "APP_DB_NAME": "APP_DB_NAME_DEV_placeholder",
         "APP_DB_URI": "APP_DB_URI_DEV_placeholder",
@@ -54,23 +56,24 @@
         "PORT": "5001",
         "APP_DEBUG": "APP_DEBUG_placeholder",
         "APP_STAGE": "qa",
-        "APP_DB_ENGINE": "APP_DB_ENGINE_QA_placeholder",
         "APP_DB_NAME": "APP_DB_NAME_QA_placeholder",
+        "APP_DB_ENGINE": "APP_DB_ENGINE_QA_placeholder",
         "APP_DB_URI": "APP_DB_URI_QA_placeholder",
         "APP_CORS_ORIGIN": "APP_CORS_ORIGIN_QA_placeholder",
         "AWS_S3_CHATBOT_ATTACHMENTS_BUCKET": "AWS_S3_CHATBOT_ATTACHMENTS_BUCKET_QA_placeholder"
       }
     },
-    "prod": {
+    "staging": {
       "api_gateway_stage": "API_GATEWAY_STAGE_placeholder",
       "environment_variables": {
         "APP_DEBUG": "0",
-        "APP_STAGE": "prod",
-        "APP_DB_ENGINE": "APP_DB_ENGINE_PROD_placeholder",
-        "APP_DB_NAME": "APP_DB_NAME_PROD_placeholder",
-        "APP_DB_URI": "APP_DB_URI_PROD_placeholder",
-        "APP_CORS_ORIGIN": "APP_CORS_ORIGIN_PROD_placeholder",
-        "AWS_S3_CHATBOT_ATTACHMENTS_BUCKET": "AWS_S3_CHATBOT_ATTACHMENTS_BUCKET_PROD_placeholder"
+        "APP_STAGE": "staging",
+        "APP_HOST_NAME": "APP_HOST_NAME_STAGING_placeholder",
+        "APP_DB_ENGINE": "APP_DB_ENGINE_STAGING_placeholder",
+        "APP_DB_NAME": "APP_DB_NAME_STAGING_placeholder",
+        "APP_DB_URI": "APP_DB_URI_STAGING_placeholder",
+        "APP_CORS_ORIGIN": "APP_CORS_ORIGIN_STAGING_placeholder",
+        "AWS_S3_CHATBOT_ATTACHMENTS_BUCKET": "AWS_S3_CHATBOT_ATTACHMENTS_BUCKET_STAGING_placeholder"
       }
     },
     "demo": {
@@ -78,11 +81,25 @@
       "environment_variables": {
         "APP_DEBUG": "0",
         "APP_STAGE": "demo",
+        "APP_HOST_NAME": "APP_HOST_NAME_DEMO_placeholder",
         "APP_DB_ENGINE": "APP_DB_ENGINE_DEMO_placeholder",
         "APP_DB_NAME": "APP_DB_NAME_DEMO_placeholder",
         "APP_DB_URI": "APP_DB_URI_DEMO_placeholder",
         "APP_CORS_ORIGIN": "APP_CORS_ORIGIN_DEMO_placeholder",
         "AWS_S3_CHATBOT_ATTACHMENTS_BUCKET": "AWS_S3_CHATBOT_ATTACHMENTS_BUCKET_DEMO_placeholder"
+      }
+    },
+    "prod": {
+      "api_gateway_stage": "API_GATEWAY_STAGE_placeholder",
+      "environment_variables": {
+        "APP_DEBUG": "0",
+        "APP_STAGE": "prod",
+        "APP_HOST_NAME": "APP_HOST_NAME_PROD_placeholder",
+        "APP_DB_ENGINE": "APP_DB_ENGINE_PROD_placeholder",
+        "APP_DB_NAME": "APP_DB_NAME_PROD_placeholder",
+        "APP_DB_URI": "APP_DB_URI_PROD_placeholder",
+        "APP_CORS_ORIGIN": "APP_CORS_ORIGIN_PROD_placeholder",
+        "AWS_S3_CHATBOT_ATTACHMENTS_BUCKET": "AWS_S3_CHATBOT_ATTACHMENTS_BUCKET_PROD_placeholder"
       }
     }
   }
