Add: "verify_base_names()" to "big_lambdas_manager.sh", to check mandatory env. vars. to have the "*_placeholder" in the SAM template.yml before deployment. Fix the "/var/scripts/get_domain_name.sh not found" error running the development backend envir. over https.

--- a/scripts/secure_local_server/docker-compose.yml
+++ b/scripts/secure_local_server/docker-compose.yml
@@ -7,14 +7,15 @@ services:
       dockerfile: Dockerfile
     volumes:
       - ${REPO_BASEDIR}:/app
-      - ${SCRIPTS_DIR}:/var/scripts
+      # - ${SCRIPTS_DIR}:/var/scripts
+      - ${SCRIPTS_DIR}/..:/var/scripts
       - ${HOME}/.aws:/root/.aws
     environment:
       - STAGE=${STAGE}
       - APP_DIR=${APP_DIR}
       - APP_MAIN_FILE=${APP_MAIN_FILE}
       - APP_HANDLER=${APP_HANDLER}
-    entrypoint: /var/scripts/docker_entrypoint.sh
+    entrypoint: /var/scripts/secure_local_server/docker_entrypoint.sh
 
   nginx:
     container_name: sls-nginx
