Add "clean_ecr_images.sh" to keep only 2 AWS ECR images for each App/Stage [GS-80]. Change: Enhance "secure_local_server/run.sh" to resume the sls-backend docker image logs if it's already running (avoiding reinstall all dependecies), and also allows to have the local GE BE and BE AI repos for faster development.

--- a/scripts/secure_local_server/docker-compose.yml
+++ b/scripts/secure_local_server/docker-compose.yml
@@ -7,7 +7,8 @@ services:
       dockerfile: Dockerfile
     volumes:
       - ${REPO_BASEDIR}:/app
-      # - ${SCRIPTS_DIR}:/var/scripts
+      # - ${REPO_BASEDIR}/../genericsuite-be:/genericsuite-be
+      # - ${REPO_BASEDIR}/../genericsuite-be-ai:/genericsuite-be-ai
       - ${SCRIPTS_DIR}/..:/var/scripts
       - ${HOME}/.aws:/root/.aws
     environment:
@@ -15,6 +16,8 @@ services:
       - APP_DIR=${APP_DIR}
       - APP_MAIN_FILE=${APP_MAIN_FILE}
       - APP_HANDLER=${APP_HANDLER}
+      - LOCAL_GE_BE_AI_REPO=${LOCAL_GE_BE_AI_REPO}
+      - LOCAL_GE_BE_REPO=${LOCAL_GE_BE_REPO}
     entrypoint: /var/scripts/secure_local_server/docker_entrypoint.sh
 
   nginx:
