--- a/.chalice/config-example.json
+++ b/.chalice/config-example.json
@@ -17,7 +17,10 @@
     "SMTP_SERVER": "SMTP_SERVER_placeholder",
     "SMTP_PORT": "SMTP_PORT_placeholder",
     "SMTP_DEFAULT_SENDER": "SMTP_DEFAULT_SENDER_placeholder",
-    "FLASK_APP": "FLASK_APP_placeholder"
+    "FLASK_APP": "FLASK_APP_placeholder",
+    "APP_HOST_NAME": "APP_HOST_NAME_placeholder",
+    "CLOUD_PROVIDER": "CLOUD_PROVIDER_placeholder",
+    "AWS_REGION": "AWS_REGION_placeholder"
   },
   "stages": {
     "dev": {
