Add: AWS Secrets manager to Makefile [GS-41]. Add: EC2+ALB App deployment [GS-96] Change: APP_STAGE dynamic assignment in run_aws.sh, set_chalice_cnf.sh, and big_lambdas_manager.sh, and secure_local_server/docker_entrypoint.sh [GS-41]. Change: __pycache__ removal simplified in big_lambdas_manager.sh [GS-96]. Change: APP_DB_URI and ther secrets assignment removed in big_lambdas_manager.sh, docker-compose-big-lambda-AL2.yml, docker-compose-big-lambda-Alpine.yml [GS-41]. Fix: 'USER_AGENT environment variable not set...' LangSmith warning message removed in run_aws.sh, big_lambdas_manager.sh, aws_big_lambda/template-sam.yml, and secure_local_server/docker_entrypoint.sh.

--- a/scripts/aws_big_lambda/docker-compose-big-lambda-AL2.yml
+++ b/scripts/aws_big_lambda/docker-compose-big-lambda-AL2.yml
@@ -20,22 +20,22 @@ services:
       - APP_NAME=$APP_NAME
       - APP_DB_ENGINE=$APP_DB_ENGINE
       - APP_DB_NAME=$APP_DB_NAME
-      - APP_DB_URI=$APP_DB_URI
+      # - APP_DB_URI=$APP_DB_URI
       - APP_CORS_ORIGIN=$APP_CORS_ORIGIN
       - AWS_S3_CHATBOT_ATTACHMENTS_BUCKET=$AWS_S3_CHATBOT_ATTACHMENTS_BUCKET
       - FLASK_APP=$FLASK_APP
-      - APP_SECRET_KEY=$APP_SECRET_KEY
-      - APP_SUPERADMIN_EMAIL=$APP_SUPERADMIN_EMAIL
+      # - APP_SECRET_KEY=$APP_SECRET_KEY
+      # - APP_SUPERADMIN_EMAIL=$APP_SUPERADMIN_EMAIL
       - CURRENT_FRAMEWORK=$CURRENT_FRAMEWORK
       - GIT_SUBMODULE_URL=$GIT_SUBMODULE_URL
       - GIT_SUBMODULE_LOCAL_PATH=$GIT_SUBMODULE_LOCAL_PATH
-      - OPENAI_API_KEY=$OPENAI_API_KEY
+      # - OPENAI_API_KEY=$OPENAI_API_KEY
       - OPENAI_MODEL=$OPENAI_MODEL
       - OPENAI_TEMPERATURE=$OPENAI_TEMPERATURE
       - SMTP_SERVER=$SMTP_SERVER
       - SMTP_PORT=$SMTP_PORT
-      - SMTP_USER=$SMTP_USER
-      - SMTP_PASSWORD=$SMTP_PASSWORD
+      # - SMTP_USER=$SMTP_USER
+      # - SMTP_PASSWORD=$SMTP_PASSWORD
       - SMTP_DEFAULT_SENDER=$SMTP_DEFAULT_SENDER
 
   nginx:
