--- a/scripts/aws_big_lambda/docker-compose-big-lambda-Alpine.yml
+++ b/scripts/aws_big_lambda/docker-compose-big-lambda-Alpine.yml
@@ -20,22 +20,22 @@ services:
       - APP_NAME=$APP_NAME
       - APP_DB_ENGINE=$APP_DB_ENGINE
       - APP_DB_NAME=$APP_DB_NAME
-      - APP_DB_URI=$APP_DB_URI
+      # - APP_DB_URI=$APP_DB_URI
       - APP_CORS_ORIGIN=$APP_CORS_ORIGIN
       - AWS_S3_CHATBOT_ATTACHMENTS_BUCKET=$AWS_S3_CHATBOT_ATTACHMENTS_BUCKET
       - FLASK_APP=$FLASK_APP
-      - APP_SECRET_KEY=$APP_SECRET_KEY
-      - APP_SUPERADMIN_EMAIL=$APP_SUPERADMIN_EMAIL
+      # - APP_SECRET_KEY=$APP_SECRET_KEY
+      # - APP_SUPERADMIN_EMAIL=$APP_SUPERADMIN_EMAIL
       - CURRENT_FRAMEWORK=$CURRENT_FRAMEWORK
       - GIT_SUBMODULE_URL=$GIT_SUBMODULE_URL
       - GIT_SUBMODULE_LOCAL_PATH=$GIT_SUBMODULE_LOCAL_PATH
-      - OPENAI_API_KEY=$OPENAI_API_KEY
+      # - OPENAI_API_KEY=$OPENAI_API_KEY
       - OPENAI_MODEL=$OPENAI_MODEL
       - OPENAI_TEMPERATURE=$OPENAI_TEMPERATURE
       - SMTP_SERVER=$SMTP_SERVER
       - SMTP_PORT=$SMTP_PORT
-      - SMTP_USER=$SMTP_USER
-      - SMTP_PASSWORD=$SMTP_PASSWORD
+      # - SMTP_USER=$SMTP_USER
+      # - SMTP_PASSWORD=$SMTP_PASSWORD
       - SMTP_DEFAULT_SENDER=$SMTP_DEFAULT_SENDER
 
   nginx:
