--- a/scripts/aws_secrets/cf_template_secrets.yml
+++ b/scripts/aws_secrets/cf_template_secrets.yml
@@ -8,175 +8,41 @@ Parameters:
   AppStage:
     Description: Application stage
     Type: String
+  KmsKeyAlias:
+    Description: KMS Key alias
+    Type: String
+    Default: genericsuite-key
+  EncryptedSecretName:
+    Description: Name for the encrypted secret.
+    Type: String
+  EncryptedSecretDescription:
+    Description: Description for the encrypted secret.
+    Type: String
+  EncryptedSecretSecretString:
+    Description: SecretString for the encrypted secret.
+    Type: String
+  UnEncryptedSecretName:
+    Description: Name for the unencrypted envvars.
+    Type: String
+  UnEncryptedSecretDescription:
+    Description: Description for the unencrypted envvars.
+    Type: String
+  UnEncryptedSecretSecretString:
+    Description: SecretString for the unencrypted envvars.
+    Type: String
+
 
 Resources:
-  KeyAdminRole:
-    Type: "AWS::IAM::Role"
-    Properties:
-      RoleName: "KeyAdminRole"
-      AssumeRolePolicyDocument:
-        Version: "2012-10-17"
-        Statement:
-          - Effect: "Allow"
-            Principal:
-              Service: "ec2.amazonaws.com"
-            Action: "sts:AssumeRole"
-      Policies:
-        - PolicyName: "KeyAdminPolicy"
-          PolicyDocument:
-            Version: "2012-10-17"
-            Statement:
-              - Effect: "Allow"
-                Action:
-                  - "kms:Create*"
-                  - "kms:Describe*"
-                  - "kms:Enable*"
-                  - "kms:List*"
-                  - "kms:Put*"
-                  - "kms:Update*"
-                  - "kms:Revoke*"
-                  - "kms:Disable*"
-                  - "kms:Get*"
-                  - "kms:Delete*"
-                  - "kms:ScheduleKeyDeletion"
-                  - "kms:CancelKeyDeletion"
-                  - "kms:GenerateDataKey"
-                Resource: "*"
-      Tags:
-        - Key: App
-          Value: !Ref AppName
-        - Key: Stage
-          Value: !Ref AppStage
-
-  UseKeyRole:
-    Type: "AWS::IAM::Role"
-    Properties:
-      RoleName: "UseKeyRole"
-      AssumeRolePolicyDocument:
-        Version: "2012-10-17"
-        Statement:
-          - Effect: "Allow"
-            Principal:
-              Service: "ec2.amazonaws.com"
-            Action: "sts:AssumeRole"
-      Policies:
-        - PolicyName: "UseKeyPolicy"
-          PolicyDocument:
-            Version: "2012-10-17"
-            Statement:
-              - Effect: "Allow"
-                Action:
-                  - "kms:Encrypt"
-                  - "kms:Decrypt"
-                  - "kms:ReEncrypt*"
-                  - "kms:GenerateDataKey*"
-                  - "kms:DescribeKey"
-                Resource: "*"
-      Tags:
-        - Key: App
-          Value: !Ref AppName
-        - Key: Stage
-          Value: !Ref AppStage
-
-  AttachKeyRole:
-    Type: "AWS::IAM::Role"
-    Properties:
-      RoleName: "AttachKeyRole"
-      AssumeRolePolicyDocument:
-        Version: "2012-10-17"
-        Statement:
-          - Effect: "Allow"
-            Principal:
-              Service: "ec2.amazonaws.com"
-            Action: "sts:AssumeRole"
-      Policies:
-        - PolicyName: "AttachKeyPolicy"
-          PolicyDocument:
-            Version: "2012-10-17"
-            Statement:
-              - Effect: "Allow"
-                Action:
-                  - "kms:CreateGrant"
-                  - "kms:ListGrants"
-                  - "kms:RevokeGrant"
-                Resource: "*"
-      Tags:
-        - Key: App
-          Value: !Ref AppName
-        - Key: Stage
-          Value: !Ref AppStage
-
-  GsKmsKey:
-    Type: "AWS::KMS::Key"
-    Properties:
-      Description: "KMS key for encrypting Secrets Manager secrets"
-      KeyPolicy:
-        Version: "2012-10-17"
-        Statement:
-          - Sid: "Enable IAM User Permissions"
-            Effect: "Allow"
-            Principal:
-              AWS: !Sub "arn:aws:iam::${AWS::AccountId}:root"
-            Action: "kms:*"
-            Resource: "*"
-          - Sid: "Allow access for Key Administrators"
-            Effect: "Allow"
-            Principal:
-              AWS: !GetAtt KeyAdminRole.Arn
-            Action: 
-              - "kms:Create*"
-              - "kms:Describe*"
-              - "kms:Enable*"
-              - "kms:List*"
-              - "kms:Put*"
-              - "kms:Update*"
-              - "kms:Revoke*"
-              - "kms:Disable*"
-              - "kms:Get*"
-              - "kms:Delete*"
-              - "kms:ScheduleKeyDeletion"
-              - "kms:CancelKeyDeletion"
-              - "kms:GenerateDataKey"
-            Resource: "*"
-          - Sid: "Allow use of the key"
-            Effect: "Allow"
-            Principal:
-              AWS: !GetAtt UseKeyRole.Arn
-            Action: 
-              - "kms:Encrypt"
-              - "kms:Decrypt"
-              - "kms:ReEncrypt*"
-              - "kms:GenerateDataKey*"
-              - "kms:DescribeKey"
-            Resource: "*"
-          - Sid: "Allow attachment of persistent resources"
-            Effect: "Allow"
-            Principal:
-              AWS: !GetAtt AttachKeyRole.Arn
-            Action: 
-              - "kms:CreateGrant"
-              - "kms:ListGrants"
-              - "kms:RevokeGrant"
-            Resource: "*"
-      Tags:
-        - Key: App
-          Value: !Ref AppName
-        - Key: Stage
-          Value: !Ref AppStage
-
-  GsKmsKeyAlias:
-    Type: "AWS::KMS::Alias"
-    Properties:
-      AliasName: "alias/GsKmsKeyAlias_placeholder"
-      TargetKeyId: !Ref GsKmsKey
-
   GsEncryptedSecret:
     Type: "AWS::SecretsManager::Secret"
     Properties: 
-      Name: "GsEncryptedSecretName_placeholder"
-      Description: "GsEncryptedSecretDescription_placeholder"
-      SecretString: '{GsEncryptedSecretSecretString_placeholder}'
-      KmsKeyId: !Ref GsKmsKey
+      # Name: "GsEncryptedSecretName_placeholder"
+      Name: !Sub "${EncryptedSecretName}"
+      # Description: "GsEncryptedSecretDescription_placeholder"
+      Description: !Sub "${EncryptedSecretDescription}"
+      # SecretString: '{GsEncryptedSecretSecretString_placeholder}'
+      SecretString: !Sub "${EncryptedSecretSecretString}"
+      KmsKeyId: !Sub "arn:aws:kms:${AWS::Region}:${AWS::AccountId}:alias/${KmsKeyAlias}"
       Tags:
         - Key: App
           Value: !Ref AppName
@@ -186,9 +52,12 @@ Resources:
   GsUnEncryptedSecret:
     Type: "AWS::SecretsManager::Secret"
     Properties: 
-      Name: "GsUnEncryptedSecretName_placeholder"
-      Description: "GsUnEncryptedSecretDescription_placeholder"
-      SecretString: '{GsUnEncryptedSecretSecretString_placeholder}'
+      # Name: "GsUnEncryptedSecretName_placeholder"
+      Name: !Sub "${UnEncryptedSecretName}"
+      # Description: "GsUnEncryptedSecretDescription_placeholder"
+      Description: !Sub "${UnEncryptedSecretDescription}"
+      # SecretString: '{GsUnEncryptedSecretSecretString_placeholder}'
+      SecretString: !Sub "${UnEncryptedSecretSecretString}"
       Tags:
         - Key: App
           Value: !Ref AppName
