Add: GET_SECRETS_CRITICAL and GET_SECRETS_CRITICAL envvars to fine-grained disabling of cloud secrets manager for critical secrets and plain envvars [GS-41]. Add: Secret and KMS access policies to the "template-sam.yml" file [GS-41]. Add: generate_cf_dynamodb and deploy_dynamodb to Makefile [GS-84]. Add: "scripts/aws_dynamodb/generate_dynamodb_cf/generate_dynamodb_cf.py" and its ".sh" to generate the "cf-template-dynamodb.yml" file in the project's scripts directory [GS-84]. Add: "scripts/aws_dynamodb/run-dynamodb-deploy.sh" to deploy generated "cf-template-dynamodb.yml" [GS-84]. Add: "scripts/aws_cf_processor/run-cf-deployment.sh" enhanced to simulate the EC2 + ALB in AWS LocalStack [GS-97]. Add: "scripts/aws_cf_processor/test_localstack.sh" to test localstack EC2 functionality with the LOCALSTACK_AUTH_TOKEN envvar [GS-97]. Change: set APP_DB_URI when GET_SECRETS_ENABLED=0 or GET_SECRETS_CRITICAL=0 in "run_aws.sh" [GS-41]. Change: "aws_secrets_manager.sh" enhanced to use "run-cf-deployment.sh" [GS-41]. Change: "cf_template_kms_key.yml" and "cf_template_secrets.yml" renamed to "cf-template-kms-key.yml" and "cf-template-secrets.yml" [GS-41]. Change: "scripts/aws_ec2_elb/ec2_elb_manager.sh" removed [GS-96]. Fix: issue reporting the "_placeholder" missing parameter in the SAM template in verify_base_names() of big_lambdas_manager.sh. Fix: "scripts/aws_ec2_elb/run-ec2-cloud-deploy.sh" and "cf-template-ec2-elb.yml" issues to finish the EC2 + ELB deployments (EBS volume encryption postponed) [GS-96].

--- a/scripts/aws_big_lambda/template-sam.yml
+++ b/scripts/aws_big_lambda/template-sam.yml
@@ -54,6 +54,34 @@ Resources:
               - logs:CreateLogStream
               - logs:PutLogEvents
               Resource: arn:*:logs:*:*:*
+        - PolicyName: Ec2SecretsAccessPolicy
+          PolicyDocument:
+            Version: '2012-10-17'
+            Statement:
+              - Effect: Allow
+                Action:
+                  - secretsmanager:GetSecretValue
+                Resource: '*'
+                # Resource: 
+                # #   - arn:aws:secretsmanager:*:*:secret:AWS_SECRETS_MANAGER_SECRETS_NAME_placeholder
+                #   - !Sub arn:aws:secretsmanager:*:*:secret:${AsmSecretsName}
+                # #   - arn:aws:secretsmanager:*:*:secret:AWS_SECRETS_MANAGER_ENVS_NAME_placeholder
+                #   - !Sub arn:aws:secretsmanager:*:*:secret:${AsmEnvsName}
+        - PolicyName: Ec2KmsAccessPolicy
+          PolicyDocument:
+            Version: '2012-10-17'
+            Statement:
+              - Effect: Allow
+                Action:
+                  - kms:Decrypt
+                  - kms:GenerateDataKey*
+                  - kms:CreateGrant
+                Resource: !Sub 'arn:aws:kms:${AWS::Region}:${AWS::AccountId}:key/*'
+                # Resource: !Sub 'arn:aws:kms:${AWS::Region}:${AWS::AccountId}:alias/${KmsKeyAlias}'
+                # Resource: '*'
+                # Resource: 
+                # # - arn:aws:kms:AWS_REGION_placeholder:AWS_ACCOUNT_ID_placeholder:alias/AWS_KMS_KEY_ALIAS_placeholder
+                #   - !Sub arn:aws:kms:${AwsRegion}:${AwsAccountId}:alias/${KmsKeyAlias}
 
   APIHandler:
     Type: AWS::Serverless::Function
@@ -72,7 +100,12 @@ Resources:
           APP_NAME: APP_NAME_placeholder
           APP_STAGE: APP_STAGE_placeholder
           CLOUD_PROVIDER: CLOUD_PROVIDER_placeholder
-          AWS_REGION: AWS_REGION_placeholder
+          # AWS_REGION: AWS_REGION_placeholder
+          # Lambda was unable to configure your environment variables because the environment variables you have provided contains reserved keys that are currently not supported for modification. Reserved keys used in this request: AWS_REGION
+
+          # GET_SECRETS_ENABLED: 0
+          # GET_SECRETS_ENVVARS: 0
+          # GET_SECRETS_CRITICAL: 0
 
           # AI_ASSISTANT_NAME: AI_ASSISTANT_NAME_placeholder
           # APP_VERSION: APP_VERSION_placeholder
